tests/errors/semantic/blocking/ex1.py
# pylint: disable=missing-function-docstring, missing-module-docstring
# coding: utf-8


x = 1
e1 = x + a
e3 = f(x) + 1

# TODO e4 not working yet. we must get 2 errors
#e4 = f(x,y) + 1
